# Personal-assistant-v02

./: Dockerfile  README.md  pyproject.toml
personal_assistant/: adressbook.py  dec.py  functions.py  hello.txt  help.txt  main.py  notebook.py  sorter.py  weather_and_bank.py
