[tool.poetry]
name = "poetry-docker"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"
#packages = [{include = "poetry_docker"}]

[tool.poetry.dependencies]
python = "~3.11.3"
pyowm = "~3.3.0"
requests = "~2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
